:bug: Frames: Fix gap between slider and button

--- a/src/css/night-react/components/_controls.sass
+++ b/src/css/night-react/components/_controls.sass
@@ -54,6 +54,8 @@
 
       +modifier(slider)
         padding-top: 30px
+        padding-left: 10px
+        padding-right: 10px
 
       +modifier(withBorderRight)
         border-right: 2px solid $backgroundColor
